# ai_devs4_python

./: .gitignore  README.md  env.dist  pyproject.toml
tasks/S01E01/: S01E01.py
tasks/S01E01/data/: suspects.csv  suspects.json
tasks/S01E02/: S01E02.py
tasks/S01E02/data/: locations_Bielik_Wojciech.json  locations_Nowak_Jacek.json  locations_Sieradzki_Oskar.json  locations_Żurek_Cezary.json  power_plants_extended.json  result.json
tasks/S01E03/: S01E03.py  S01E03_api.py
tasks/S01E04/: S01E04.py
tasks/S01E04/data/: declaration.txt  trasy-wylaczane.txt
tasks/S01E05/: S01E05.py  S01E05_execution.ipynb
tasks/S01E05/data/: agent_state.json  execution_log.jsonl  execution_plan.json
tasks/S02E01/: S02E01.py
tasks/S02E01/data/: items.csv  run_log.jsonl
tasks/S02E02/: S02E02-LLM_VISION_NOT_WORKING.py  S02E02-OPEN_CV.py  S02E02.py
tasks/S02E02/data/logs/s02e02v2_20260317T194956Z/: current_board_map.json  rotation_plan.json  rotation_responses.json  summary.json  target_board_map.json  verify_result.json
tasks/S02E03/: S02E03_not_working.py  S02E03_simple.py
tasks/S02E03/data/: final_logs.txt  focus_terms.json  iteration_summary.json  last_feedback.json  severity_profile.json
tasks/S02E03/data/logs/s02e03_20260320T181424Z/: agent_log.jsonl
tasks/S02E03/data/logs/s02e03_20260320T184825Z/: agent_log.jsonl
tasks/S02E03/data/logs/s02e03_20260320T190614Z/: agent_log.jsonl
tasks/S02E03/data/logs/s02e03_20260320T191346Z/: agent_log.jsonl
tasks/S02E04/: S02E04.py
tasks/commons/: llm_usage.py  task_handler.py
utils/: logger.py
(+7 files in other folders)
