[project]
name = "ai-devs4-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksander Krysa",email = "salamanderkrajza@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "google-genai (>=1.66.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "tqdm (>=4.67.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
